module/openapi-annotations-plugin/src/test/resources/net/jacobpeterson/jet/openapiannotationsplugin/testproject/fail/duplicatekey/src/main/java/Test.java
import net.jacobpeterson.jet.openapiannotations.OpenApi;
import net.jacobpeterson.jet.openapiannotations.OpenApiPathItem;
import net.jacobpeterson.jet.openapiannotations.OpenApiPaths;
import org.jspecify.annotations.NullMarked;

@NullMarked
@OpenApi(paths = @OpenApiPaths(@OpenApiPathItem.MapEntry(
        key = "/test",
        value = @OpenApiPathItem(methods = {
                @OpenApiPathItem.MethodEntry(key = "DELETE"),
                @OpenApiPathItem.MethodEntry(key = "DELETE")
        })
)))
public final class Test {}
